pihole/kustomization/nebula-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula-sync
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nebula-sync
  template:
    metadata:
      labels:
        app: nebula-sync
    spec:
      containers:
        - name: nebula-sync
          image: ghcr.io/lovelaze/nebula-sync:v0.11.0
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
