pihole/kustomization/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  serviceName: pihole-headless
  replicas: 2
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: pihole
              topologyKey: kubernetes.io/hostname
      containers:
        - name: pihole
          image: ghcr.io/pi-hole/pihole:2025.04.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /admin
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 6
          # volumeMounts:
          #   - name: pihole-config
          #     mountPath: /etc/pihole
          #   - name: dnsmasq-config
          #     mountPath: /etc/dnsmasq.d
          #   - name: custom-dnsmasq
          #     mountPath: /etc/ddnsmasq.d/02-custom.conf
          #     subPath: 02-custom.conf
          #   - name: custom-dnsmasq
          #     mountPath: /etc/addn-hosts
          #     subPath: addn-hosts
          #   - name: custom-dnsmasq
          #     mountPath: /etc/dnsmasq.d/05-pihole-custom-cname.conf
          #     subPath: 05-pihole-custom-cname.conf
      # volumes:
      #   - name: custom-dnsmasq
      #     configMap:
      #       name: pihole-custom-dnsmasq
      #       defaultMode: 0420
  volumeClaimTemplates:
    - metadata:
        name: pihole-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: dnsmasq-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 256Mi
