pihole/kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-headless
  namespace: pihole
spec:
  clusterIP: None
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: pihole-tailscale
  namespace: pihole
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/hostname: pihole-dns
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  externalTrafficPolicy: Cluster
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole          # hits pihole-0 and pihole-1
  ports:
    - name: http
      port: 80
      targetPort: 80
